fix price button spacing

--- a/static/css/concat.css
+++ b/static/css/concat.css
@@ -22585,7 +22585,7 @@ input[type=radio].inline {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
   min-height: 130px;
 }
 .donate-embed-form__price-button {
@@ -22594,8 +22594,8 @@ input[type=radio].inline {
   font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
   font-weight: 600;
   display: block;
-  flex-grow: 1;
-  flex-basis: 45%;
+  flex-basis: 48%;
+  margin-right: 0px !important;
   margin-top: 12px;
   outline: none;
   color: black;
